--- a/styles/v-entry.css
+++ b/styles/v-entry.css
@@ -14,14 +14,13 @@
     font-weight: 700;
 }
 
-.rectangle {
+.rectangle, .rectangle-exit {
     width: 1050px;
     height: 820px;
     border-radius: 50px;
     background: #DDE6ED;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
 
 .complete-name {
     width: 600px;
